@@ -15,6 +15,7 @@ For users:
 - New: Can use inline images in emails.
 - New: Add predefined invoices (can be use for repeated invoices).
 - New: Add a confirmation when cloning products.
+- New: Add stock in product lists
 - Fix: Customer code was not correct on PDF it if contains special 
        characters.
 - Fix: Can update price even with "NPR" VAT rates.
